# colostate-minfo

./: README.md  pyproject.toml  setup.py
minfo/: __init__.py
minfo/tools/: launch_ssh.py  launch_vscode.pyw  minfo_ssh.py  minfo_vscode.py
tools/: minfo_ssh.py  minfo_vscode.py
